--- a/14consensus_cn.asciidoc
+++ b/14consensus_cn.asciidoc
@@ -26,7 +26,7 @@
 
 在本书出版之时，以太坊仍在使用工作量证明，但正在进行的有关权益证明的替代方案的研究已接近完成。以太坊计划的PoS算法称为_Casper_。在过去两年中，卡斯珀（Casper）替代Ethash的计划已被推迟了好几次，因此必须采取干预措施以缓解难度炸弹的发生，从而避免强制废除工作量证明。
 
-通常而言，PoS算法的工作原理如下。区块链跟踪一组验证者，任何持有区块链基础加密货币（以太坊中为以太币）的人都可以通过发送一种特殊的交易来将其以太币锁定为押金来成为验证者。验证人轮流对下一个有效区块提出建议并投票，每个验证人的投票权重取决于其押金（即权益）的大小。重要的是，如果将验证者押在其上的区块被大多数验证者拒绝，则验证者可能会丢失其押金。相反，对于大多数人接受的每个区块，验证者都会获得与他们所存股份成比例的少量奖励。因此，PoS通过奖励和惩罚系统迫使验证者诚实行事并遵循共识规则。 PoS和PoW之间的主要区别在于PoS中的惩罚是区块链固有的资源（例如，失去作为押金的以太币），而在PoW中，惩罚是外部的资源（例如，在加入验证上花费的资金损失：[ <span class="keep-together">电力</span> ]）。
+通常而言，PoS算法的工作原理如下。区块链跟踪一组验证者，任何持有区块链基础加密货币（以太坊中为以太币）的人都可以通过发送一种特殊的交易来将其以太币锁定为押金来成为验证者。验证人轮流对下一个有效区块提出建议并投票，每个验证人的投票权重取决于其押金（即权益）的大小。重要的是，如果将验证者押在其上的区块被大多数验证者拒绝，则验证者可能会丢失其押金。相反，对于大多数人接受的每个区块，验证者都会获得与他们所存股份成比例的少量奖励。因此，PoS通过奖励和惩罚系统迫使验证者诚实行事并遵循共识规则。 PoS和PoW之间的主要区别在于PoS中的惩罚是区块链固有的资源（例如，失去作为押金的以太币），而在PoW中，惩罚是外部的资源（例如，在加入验证上花费的资金损失 pass:[ <span class="keep-together">电力</span> ]）。
 
 [[ethash]]
 === Ethash：以太坊的工作量证明算法
