--- a/appdx-standards-eip-erc_cn.asciidoc
+++ b/appdx-standards-eip-erc_cn.asciidoc
@@ -28,10 +28,10 @@ image::images/eip_workflow.png["以太坊改进提案工作流程"]
 | http://bit.ly/2yJtTNa[EIP-2] |家园版本硬分叉的变化 | Vitalik Buterin |核心|定稿|
 
 | http://bit.ly/2Jrx93V[EIP-5] | RETURN和CALL的gas使用量| Christian Reitwiessner |核心|草稿|
-| http://bit.ly/2OYbc2t[EIP-6] |重命名+ SUICIDE +操作码|Hudson Jameson|界面 | 定稿|
+| http://bit.ly/2OYbc2t[EIP-6] |重命名 +SUICIDE+ 操作码|Hudson Jameson|界面 | 定稿|
 | http://bit.ly/2JxdBeN[EIP-7] | `DELEGATECALL` | Vitalik Buterin |核心|定稿|
 | http://bit.ly/2Q6Oly6[EIP-8] | devp2p 家园版本的向前兼容性要求|Felix Lange |网络|定稿|
-| http://bit.ly/2CUf7WG[EIP-20] | ERC-20通证标准。描述了通证合同可能实现的标准功能，以允许DApp和钱包跨多个接口/ DApp处理通证。方法包括：`totalSupply`，+ balanceOf（address）+，`transfer`，`transferFrom`，`approve`，`allowance`。事件包括：“ Transfer”（在通证传输时触发），pass：[ <span class="keep-together"><code>Approval</code></span> ]（在调用“ approve”时触发）。 | Fabian Vogelsteller，Vitalik Buterin | ERC |定稿|边境版本
+| http://bit.ly/2CUf7WG[EIP-20] | ERC-20通证标准。描述了通证合同可能实现的标准功能，以允许DApp和钱包跨多个接口/ DApp处理通证。方法包括：`totalSupply`，+ balanceOf（address）+，`transfer`，`transferFrom`，`approve`，`allowance`。事件包括：“ Transfer”（在通证传输时触发）， pass:[ <span class="keep-together"><code>Approval</code></span> ]（在调用“ approve”时触发）。 | Fabian Vogelsteller，Vitalik Buterin | ERC |定稿|边境版本
 | http://bit.ly/2Q6R4YB[EIP-55] |混合大小写校验和地址编码| Vitalik Buterin | ERC |定稿|
 | http://bit.ly/2OgE5la[EIP-86] |交易来源和签名的抽象。为“抽象”帐户安全性和允许用户创建“帐户合约”奠定基础，朝着一个模型发展。在该模型中，所有帐户都是可以支付燃料gas费用的合约，用户可以自定义自己的安全模型，用于执行任何所需的签名验证和随机数检查（而不是使用协议内机制，其中ECDSA和默认随机数方案是保护帐户的唯一“标准”方式，当前已硬编码到交易处理中）。 | Vitalik Buterin |核心|递延（将被替换）|君士坦丁堡
 | http://bit.ly/2QedSFC[EIP-96] | Blockhash和状态根更改。在状态中存储区块哈希散列值以减少处理“ BLOCKHASH”操作码时协议的复杂性和客户端的复杂实现。扩展了向后扩展块哈希检查的范围，其副作用是在区块编号非常远的区块之间创建直接链接，以促进更高效的初始轻节点同步。 | Vitalik Buterin |核心|推迟|君士坦丁堡
@@ -39,7 +39,7 @@ image::images/eip_workflow.png["以太坊改进提案工作流程"]
 | http://bit.ly/2Jr1zDv[EIP-101] |宁静版本中的加密货币和加密抽象。以太坊可以将以太坊和子代币进行类似的处理，从而将以太坊抽象化，进而降低定制策略账户（例如多重签名）所需的间接级别，并通过降低最小共识实现的复杂性来净化底层的以太坊协议。 | Vitalik Buterin |活跃|宁静功能|宁静Casper版本
 | http://bit.ly/2Q5sdEv[EIP-105] |二进制分片加合约调用语义。 “分片架构” EIP允许使用二叉树分片机制对以太坊事务进行并行化处理，并为以后的分片方案奠定基础。研究正在进行中；参见https://github.com/ethereum/sharding []。 | Vitalik Buterin |活跃|宁静功能|宁静Casper版本
 | http://bit.ly/2yG2Dzi[EIP-137] |以太坊域名服务-规范|Nick Johnson | ERC |定稿|
-| http://bit.ly/2yJtWZm[EIP-140] |新操作码：+ REVERT +。添加`REVERT`操作码指令，该指令将停止执行并回滚EVM执行状态的变动，而不会消耗所有提供的燃料gas（相反，合约仅需支付内存）或丢失日志，并向调用方返回指向内存位置的指针，并带有错误代码或消息。 | Alex Beregszaszi，Nikolai Mushegian |核心|定稿|大都会拜占庭版本
+| http://bit.ly/2yJtWZm[EIP-140] |新操作码： +REVERT+ 。添加`REVERT`操作码指令，该指令将停止执行并回滚EVM执行状态的变动，而不会消耗所有提供的燃料gas（相反，合约仅需支付内存）或丢失日志，并向调用方返回指向内存位置的指针，并带有错误代码或消息。 | Alex Beregszaszi，Nikolai Mushegian |核心|定稿|大都会拜占庭版本
 | http://bit.ly/2CQMXfe[EIP-141] |指定的无效EVM指令| Alex Beregszaszi |核心|定稿|
 | http://bit.ly/2qhKz9Y[EIP-145] | EVM中的按位移位指令 | Alex Beregszaszi，PawełBylica |核心|推迟|
 | http://bit.ly/2qhxflQ[EIP-150] | 对IO操作过多的gas成本变化| Vitalik Buterin |核心|定稿|
@@ -53,9 +53,9 @@ image::images/eip_workflow.png["以太坊改进提案工作流程"]
 | http://bit.ly/2OgCWu1[EIP-170] |合约代码大小限制| Vitalik Buterin |核心|定稿|
 | http://bit.ly/2ERNv7g[EIP-181] | ENS支持以太坊地址的反向解析|Nick Johnson | ERC |定稿|
 | http://bit.ly/2P0wPz5[EIP-190] |以太坊智能合约包装标准| Piper Merriam等。 | ERC |定稿|
-| http://bit.ly/2SwNQiz[EIP-196] |椭圆曲线+ alt_bn128 +上用于加法和标量乘法的预编译合同。此操作是为了在区块gas限制内执行zkSNARK验证所必需的。
+| http://bit.ly/2SwNQiz[EIP-196] |椭圆曲线 +alt_bn128+ 上用于加法和标量乘法的预编译合同。此操作是为了在区块gas限制内执行zkSNARK验证所必需的。
 |Christian Reitwiessner |核心|定稿|大都会拜占庭
-| http://bit.ly/2ETDC9a[EIP-197] |预编译合约，用于在椭圆曲线+ alt_bn128 +上进行最佳的食物配对检查。与EIP-196结合。
+| http://bit.ly/2ETDC9a[EIP-197] |预编译合约，用于在椭圆曲线 +alt_bn128+ 上进行最佳的食物配对检查。与EIP-196结合。
 | Vitalik Buterin，Christian Reitwiessner|核心|定稿|大都会拜占庭
 | http://bit.ly/2DdTCRN[EIP-198] |大整数模幂。预编译后可使用RSA签名验证和其他加密应用程序。
 | Vitalik Buterin |核心|定稿|大都会拜占庭
@@ -78,6 +78,6 @@ image::images/eip_workflow.png["以太坊改进提案工作流程"]
 | http://bit.ly/2AAkCIP[EIP-721] | ERC-721不可替代通证标准。一种标准API，允许智能合约作为唯一的可交易不可交易通证（NFT）进行操作，可以在标准钱包中进行跟踪，并在交易所作为有价资产进行交易，类似于ERC20。 CryptoKitties是在以太坊生态系统中第一个被广泛采用的数字NFT实现。 | William Entriken，Dieter Shirley，Jacob Evans，Nastassia Sachs |标准|草稿|
 | http://bit.ly/2qmuDmJ[EIP-758] |对于已经完成的交易的订阅和过滤服务|Jack Peterson|界面|草稿|
 | http://bit.ly/2RnqlHy[EIP-801] | ERC-801 Canary 标准| ligi |界面|草稿|
-| http://bit.ly/2DdTKkf[EIP-827] | ERC827通证标准。通证的标准接口ERC20的扩展，其方法允许执行+ transfer +和批准内的调用。该标准提供了传输通证的基本功能，并允许通证被批准，以便其他链上第三方可以使用它们。此外，它还允许开发人员执行对转移和批准的调用。 |Augusto Lemble | ERC |草稿|
+| http://bit.ly/2DdTKkf[EIP-827] | ERC827通证标准。通证的标准接口ERC20的扩展，其方法允许执行 +transfer+ 和批准内的调用。该标准提供了传输通证的基本功能，并允许通证被批准，以便其他链上第三方可以使用它们。此外，它还允许开发人员执行对转移和批准的调用。 |Augusto Lemble | ERC |草稿|
 | http://bit.ly/2Jq2hAM[EIP-930] | ERC930永久存储。 ES（外部存储）合约由具有写入许可权的地址拥有。存储是公共的，这意味着每个人都有读取权限。它将数据存储在映射中，每种类型的变量使用一个映射。使用此合约，开发人员可以根据需要轻松地将存储迁移到另一个合约。 |Augusto Lemble| ERC |草稿|
 |===
